--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,14 @@
 
 html {
   scroll-behavior: smooth;
+  overflow: scroll;
+  overflow-x: hidden;
 }
 
-body {
-  /* opacity: .25; */
+/* hides scrollbar */
+::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
 }
 
 .triangle {
@@ -40,10 +44,27 @@ body {
   mask-composite: exclude;
 }
 
-
-
 @keyframes spinner {
   to {
-     transform: rotate(1turn);
+    transform: rotate(1turn);
+  }
+}
+
+.rotate-animation {
+  animation-name: rotate-scale;
+  animation-duration: 750ms;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+}
+
+@keyframes rotate-scale {
+  0% {
+    transform: rotate(0deg) scale(1);
+  }
+  50% {
+    transform: rotate(180deg) scale(1.1);
+  }
+  100% {
+    transform: rotate(360deg) scale(1);
   }
 }
